/* 
  Localizable.strings
  SEED

  Created by Ryne Cheow on 25/3/17.
  Copyright © 2017 Pointwelve. All rights reserved.
*/

"Canadian Dollar" = "Canadian Dollar";

"Euro" = "Euro";

"Japanese Yen" = "Japanese Yen";

"Korean Won" = "Korean Won";

"Pound sterling" = "Pound sterling";

"Renminbi" = "Renminbi";

"US Dollar" = "US Dollar";

"Bitcoin" = "Bitcoin";

"Bitshares" = "Bitshares";

"Bitthumb" = "Bitthumb";

"Coinone" = "Coinone";

"Ethereum" = "Ethereum";

"Ethereum Classic" = "Ethereum Classic";

"Jubi" = "Jubi";

"Korbit" = "Korbit";

"Litecoin" = "Litecoin";

"OKCoin" = "OKCoin";

"Ripple" = "Ripple";

"color.candlestick.negative" = "#cb4646";

"color.candlestick.positive" = "#01b17b";

"color.percentage.negative" = "#ef4242";

"color.percentage.positive" = "#49c530";

"cryptocurrency.text" = "Cryptocurrency";

"currency.detail.oneHour" = "1H";

"currency.detail.fourHours" = "4H";

"currency.detail.oneDay" = "1D";

"currency.detail.oneMinute" = "1m";

"currency.detail.fiveMinute" = "5m";

"currency.detail.fifteenMinutes" = "15m";

"currency.detail.inADay" = "IN A DAY";

"currency.detail.lowHigh24h" = "LOW/HIGH 24H";

"currency.detail.marketCap" = "MARKET CAP";

"currency.detail.open24h" = "OPEN 24H";

"currency.detail.volume24h" = "VOLUME 24H";

"empty.view.message" = "Change the search parameters, perhaps?";

"empty.view.title" = "NO RESULTS";

"empty.watchlist.message" = "Tap '+' to add cryptocurrency pairs to your watchlist.";

"empty.watchlist.title" = "WATCHLIST IS EMPTY";

"error.sorry.message" = "Something has went wrong, please try again.";

"error.sorry.title" = "WE'RE SORRY!";

"language.current" = "English";

"language.dateFormat.current" = "dd MMMM yyyy hh:mmaa";

"loading.message" = "Please be patient when we are trying to get you the latest data.";

"loading.title" = "PLEASE WAIT";

"offline.view.message" = "You appear to be offline. Service will resume once network connection is back.";

"offline.view.title" = "OH NO!";

"portfolio.title" = "Portfolio";

"settings.language.title" = "Language";

"settings.nightMode.title" = "Night Mode";

"settings.termsAndConditions.title" = "Terms and Conditions";

"settings.title" = "Settings";

"watchlist.addcoin.search" = "Search";

"watchlist.graphLoading" = "Retrieving prices...";

"watchlist.title" = "Watchlist";

